Renamed the mod in order to avoid confusion with the original Construction Planner:
- There has been some uptick in activity in development of the
  original mod, so it might be helpful to differentiate between the
  two a bit more to avoid confusion.
- Updated the thumbnail with a custom SVG icon representing road
  construction barrier.
- Renamed the helper command while at it as well.
- Updated the readme file, dropping some outdated references and
  improving wording in a couple of places.

--- a/src/locale/en/items.cfg
+++ b/src/locale/en/items.cfg
@@ -1,8 +1,8 @@
 [item-group-name]
-unapproved-entities=Ghost Placeholders (Construction Planner)
+unapproved-entities=Ghost Placeholders (Construction Approvals)
 
 [item-name]
-construction-planner=Construction Planner
+construction-planner=Construction planner
 
 [item-description]
 construction-planner=Approve/unapprove ghost entities for construction
