Added setting for approval badge/indicator size:
- Default size has been reduced since it will probably create less
  clutter for the player.
- Values are fixed, but should provide for enough variety.

--- a/src/locale/en/settings.cfg
+++ b/src/locale/en/settings.cfg
@@ -3,6 +3,15 @@ ConstructionPlannerContinued=Construction Approvals
 
 [mod-setting-name]
 constructionPlanner-auto-approve=Auto-approve new ghosts
+construction-approvals-indicator-size=Approval indicator size
 
 [mod-setting-description]
 constructionPlanner-auto-approve=When enabled, newly-built and newly-stamped ghosts will start out as approved instead of unapproved.  This setting can also be toggled in-game by toolbar shortcut or by hotkey (__CONTROL__toggle-auto-approve__)
+construction-approvals-indicator-size=Set the size of approval indicators (tick-boxes shown on top of ghost entities). Changing the size of approval indicators in an existing save game might result in a slight stutter as the indicators are updated across all surfaces/planets.
+
+[string-mod-setting]
+construction-approvals-indicator-size-tiny=Tiny
+construction-approvals-indicator-size-small=Small
+construction-approvals-indicator-size-normal=Normal
+construction-approvals-indicator-size-large=Large
+construction-approvals-indicator-size-huge=Huge
