Use approvals on ghost entities built by other mods (that raise the built event):
- Does not need the same type of handling for rails like when player
  builds them.
- Try to log warning if we cannot determine what player is responsible
  for the build, and auto-approve such ghosts. Some refinement may be
  needed for this down the line to avoid excessive logging/spamming.

--- a/src/locale/en/messages.cfg
+++ b/src/locale/en/messages.cfg
@@ -3,3 +3,4 @@ ca-cleanup-command-confirm=[color=yellow][WARNING][/color] Please re-run the ca_
 ca-cleanup-command-started=[color=yellow][WARNING][/color] Clean-up command is running for Construction Approvals to fix eventual inconsistencies.
 ca-cleanup-command-finished=[color=yellow][WARNING][/color] Clean-up command for Construction Approvals has finished running. Should you detect inconsistencies or missing ghosts, please restore game from a backup, and file a bug report.
 ca-failed-force-paste=[color=yellow][WARNING][/color] Construction Approvals: Failed to place an unapproved ghost (__1__). If you are able to reproduce the issue, please report reproduction steps on mod's discussion pages.
+ca-script-built-no-last-user=[color=yellow][WARNING][/color] Construction Approvals: Could not determine player responsible for placing the ghost entity (__1__). Ghost entity will be approved for building. Please report the issue on mod's discussion pages.
